--- a/javascript/oojs/bouncing-balls/index-finished.html
+++ b/javascript/oojs/bouncing-balls/index-finished.html
@@ -9,6 +9,7 @@
 
   <body>
     <h1>bouncing balls</h1>
+    <p index="counter"></p>
     <canvas></canvas>
 
     <script src="main-finished.js"></script>
